# DarkMatterRates

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  DMeRates_Examples.ipynb  LICENSE  QCDARK2_FLUX_EXTENSION_NOTES.md  QCDARK2_INTEGRATION_REFERENCE.md  QCDARK2_PORTING_SCOPE.md  README.md  pyproject.toml  requirements.txt
DMeRates/: Constants.py  DM_Halo.py  DMeRate.py  __init__.py  config.py  form_factor.py  interpolation.py  qcdark2_backend.py  rate_calculator.py  response.py  spectrum.py  units.py
agents/: README.md  code-extractor.md  dielectric-engine.md  infrastructure.md  physics-derivation.md  run_order.md  srdm-api-wiring.md  srdm-dielectric-engine.md  srdm-form-factor-engine.md  srdm-infrastructure.md  srdm-physics-derivation.md  srdm_run_order.md  units-numerics-reviewer.md  validator.md
halo_data/: README.md  shm_v0238.0_vE250.2_vEsc544.0_rhoX0.3.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX144977.9.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX33941722.2.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX3684856.5.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX410862.5.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX48407999.5.txt  shm_v0238.0_vE250.2_vEsc544.0_rhoX7535831035.1.txt
limits/: Constraints.py  constraints.ipynb  current_constraints_fdm1_migdal.csv  damic_2025_migdal_heavy.csv  pandax4t_2023_heavy.csv
modulation_study/: Isoangle.ipynb  Modulation.py  isoangle.py  modulation_rates_generating.ipynb  round_rename.sh  testing.ipynb
scripts/: benchmark_qcdark2.py  reproduce_qcdark2_nr.py
tests/: VALIDATION_SUITE_INSTRUCTIONS.md  compare_qcdark.ipynb  compare_qcdark2.ipynb  (+52 more)
(+39 files in other folders)
